--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
   <meta charset="utf-8">
   <title>Responsive-image-section</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <section>
     <h1>Intense Mint Dark Chocolate</h1>
-      <strong>85% Cocoa</strong>
-      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
-  </section>
-  <section>
-  <img src="images/placeholder-4by3.svg" alt="">
+    <strong>85% Cocoa</strong>
+    <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+    <a href="#">Read now</a>
+    <div>
+      <img src="images/placeholder-4by3.svg" alt="">
+    </div>
   </section>
 </body>
