--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
     <a href="#">Read now</a>
     <div>
-      <img src="images/placeholder-4by3.svg" alt="">
+      <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
     </div>
   </section>
 </body>
