--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
   <section>
-    <h1>Intense Mint Dark Chocolate</h1>
-    <strong>85% Cocoa</strong>
-    <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
-    <a href="#">Read now</a>
+    <div>
+      <h1>Intense Mint Dark Chocolate</h1>
+      <strong>85% Cocoa</strong>
+      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+      <a href="#">Read now</a>
+    </div>
     <div>
       <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
     </div>
   </section>
 </body>
+</html>
