--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <section>
     <div>
       <h1>Intense Mint Dark Chocolate</h1>
-      <strong>85% Cocoa</strong>
-      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+      <p><strong>85% Cocoa</strong>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
       <a href="#">Buy now</a>
     </div>
     <div>
