--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
   <section>
-    <div>
+    <div class="content">
       <h1>Intense Mint Dark Chocolate</h1>
-      <p><strong>85% Cocoa</strong>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+      <strong>85% Cocoa</strong>
+      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
       <a href="#">Buy now</a>
     </div>
-    <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
+    <div class="content-img">
+      <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
+    </div>
   </section>
 </body>
 </html>
